--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello Ann!'"
       ]
      },
      "execution_count": null,
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello(\"Ann\")"
    ]
   },
   {
@@ -86,7 +86,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
